<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018 Eric Afenyo

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">


        <ImageView
            android:id="@+id/image_lock_open"
            android:layout_width="@dimen/image_icon_width"
            android:layout_height="@dimen/margin_padding_huge"
            android:layout_marginTop="@dimen/margin_padding_huge"
            android:contentDescription="@string/accessibility_illustrative_icon"
            android:src="@drawable/ic_lock_open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_small"
            android:contentDescription="@string/accessibility_information_text"
            android:text="@string/label_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="@+id/image_lock_open"
            app:layout_constraintStart_toStartOf="@+id/image_lock_open"
            app:layout_constraintTop_toBottomOf="@+id/image_lock_open" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/margin_padding_large"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/accessibility_email_input"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/accessibility_password_input"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
            android:id="@+id/button_sign_in"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/accessibility_login_button"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/text_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_sign_up" />

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="@dimen/margin_padding_medium"
            android:layout_height="@dimen/margin_padding_medium"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/white"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/button_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
            app:layout_constraintStart_toStartOf="@+id/button_sign_in"
            app:layout_constraintTop_toTopOf="@+id/button_sign_in" />

        <TextView
            android:id="@+id/text_account_state_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/accessibility_information_text"
            android:text="@string/mgs_no_account"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/text_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_sign_up" />

        <TextView
            android:id="@+id/text_sign_up"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/accessibility_launch_sign_up_screen"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:text="@string/action_sign_up"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toEndOf="@+id/text_account_state_info"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
