<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2018 Eric Afenyo

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.AddPhotoFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/label_add_your_photo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="@dimen/startup_profile_image_view_size"
        android:layout_height="@dimen/startup_profile_image_view_size"
        android:layout_marginTop="@dimen/margin_padding_extra_large"
        android:background="@drawable/border"
        android:foreground="?selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <android.support.design.chip.Chip
        android:id="@+id/chip_new_photo"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_extra_large"
        android:text="@string/action_new_photo"
        app:layout_constraintEnd_toStartOf="@+id/chip_open_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />

    <android.support.design.chip.Chip
        android:id="@+id/chip_open_gallery"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_open_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/chip_new_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chip_new_photo"
        app:layout_constraintTop_toTopOf="@+id/chip_new_photo" />

    <TextView
        android:id="@+id/text_finish"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary_50"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:text="@string/action_finish"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>